--- a/WebRoot/mine-sweep.html
+++ b/WebRoot/mine-sweep.html
@@ -14,9 +14,9 @@
 <link href="css/mine.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<svg viewBox="0 0 600 400">
+<svg viewBox="0 0 600 400" preserveaspectratio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
 	<defs>
-		<polygon id="pattern2" points="0 0 1 1 2 2" />
+		<polygon id="pattern2" points="0 0 1 1 2 2" ></polygon>
 		<text id="t1" fill="#80ffff">1</text>
 		<text id="t2" fill="#64ff64">2</text>
 		<text id="t3" fill="#ff9900">3</text>
@@ -25,53 +25,53 @@
 		<text id="t6" fill="#00bfff">6</text>
 	
 		<g id="flagMark">
-			<path d="M-3 -10 l0 15 15 0z" fill="#ff0000" stroke="none" />
-			<path d="M-3 -10 l0 20" fill="none" stroke="#800000" stroke-width="3" />
+			<path d="M-3 -10 l0 15 15 0z" fill="#ff0000" stroke="none" ></path>
+			<path d="M-3 -10 l0 20" fill="none" stroke="#800000" stroke-width="3" ></path>
 		</g>
 		<use id="useFlag" x="0" y="14" xlink:href="#flagMark"
-				xmlns:xlink="http://www.w3.org/1999/xlink" />
+				xmlns:xlink="http://www.w3.org/1999/xlink" ></use>
 		<g id="flagErrMark">
-			<path d="M-3 -10 l0 15 15 0z" fill="#fff" stroke="none" />
-			<path d="M-3 -10 l0 20" fill="none" stroke="#ccc" stroke-width="3" />
+			<path d="M-3 -10 l0 15 15 0z" fill="#fff" stroke="none" ></path>
+			<path d="M-3 -10 l0 20" fill="none" stroke="#ccc" stroke-width="3" ></path>
 		</g>
 		<g id="mine">
 			<path fill="none" stroke="#333333" stroke-width="1"
-				d="m 7.625,16.49 c -5.125,-13.62 11,2 9.5,-7.88" />
+				d="m 7.625,16.49 c -5.125,-13.62 11,2 9.5,-7.88" ></path>
 			<path fill="#808080" stroke="#333333" stroke-width="1"
-				d="m 11.375,23.74 4.375,-4.75 -4,-5.5 c 0,0 -2.07,-0.24 -4,1.37 -2.25,1.88 -2.5,3.5 -2.5,3.5 z" />
+				d="m 11.375,23.74 4.375,-4.75 -4,-5.5 c 0,0 -2.07,-0.24 -4,1.37 -2.25,1.88 -2.5,3.5 -2.5,3.5 z" ></path>
 			<circle cx="15" cy="23" r="8" fill="#999" stroke="#333333"
-				stroke-width="1" />
+				stroke-width="1" ></circle>
 		</g>
 		<g id="mineErr">
 			<path fill="none" stroke="#cc0000" stroke-width="1"
-				d="m 7.625,16.49 c -5.125,-13.62 11,2 9.5,-7.88" />
+				d="m 7.625,16.49 c -5.125,-13.62 11,2 9.5,-7.88" ></path>
 			<path fill="#cc0000" stroke="#333333" stroke-width="1"
-				d="m 11.375,23.74 4.375,-4.75 -4,-5.5 c 0,0 -2.07,-0.24 -4,1.37 -2.25,1.88 -2.5,3.5 -2.5,3.5 z" />
+				d="m 11.375,23.74 4.375,-4.75 -4,-5.5 c 0,0 -2.07,-0.24 -4,1.37 -2.25,1.88 -2.5,3.5 -2.5,3.5 z" ></path>
 			<circle cx="15" cy="23" r="8" fill="#cc0000" stroke="#333333"
-				stroke-width="1" />
+				stroke-width="1" ></circle>
 		</g>
 	</defs>
-	<rect x="1" y="1" width="598" height="398" fill="#009900" stroke="#009900" stroke-width="2" ab="author"/>
+	<rect x="1" y="1" width="598" height="398" ab="author"></rect>
+	<g id="panel"></g>
 	<g id="gSize"></g>
 	<g id="gMines"></g>
 	<g id="gFlags"></g>
 	
 	<g class="button">
-		<path id="btnNew" d="M 30 360 l00,-10 h50v20l-10,10h-50z" class="button" />
-		<text class="events-none" x="0" y="322" fill="#006600"
-					text-anchor="middle">New</text>
+		<path id="btnNew" d="M 50 370 l 7 -7 h35 l 7 7 v10 l -7 7 h-35 l -7 -7 z" class="button" ></path>
+		<text class="events-none" x="76" y="382">New</text>
 	</g>
-	<g class="button events-none">
-		<path d="M 100 360 l10,-10 h50v20l-10,10h-50 z" class="button"/>
-		<text x="70" y="322" id="numTimePast" fill="#006600" text-anchor="middle"></text>
+	<g class="label">
+		<path d="M 120 370 l 7 -7 h35 l 7 7 v10 l -7 7 h-35 l -7 -7 z"></path>
+		<text id="time" x="145" y="382"></text>
 	</g>
-	<g class="button events-none">
-		<path d="M 380 360 l10,-10 h50v20l-10,10h-50z" class="button"/>
-		<text x="350" y="322" id="needOpenRest" fill="#006600" text-anchor="middle"></text>
+	<g class="label">
+		<path d="M 430 370 l 7 -7 h35 l 7 7 v10 l -7 7 h-35 l -7 -7 z"></path>
+		<text id="needOpen" x="455" y="382"></text>
 	</g>
-	<g class="button events-none">
-		<path d="M 450 360 l10,-10 h50v20l-10,10h-50z" class="button"/>
-		<text x="420" y="322" id="numMinesRest" fill="#006600" text-anchor="middle"></text>
+	<g class="label">
+		<path d="M 500 370 l 7 -7 h35 l 7 7 v10 l -7 7 h-35 l -7 -7 z"></path>
+		<text id="minesRest" x="525" y="382"></text>
 	</g>
 </svg>
 </body>
