--- a/WebRoot/mine-sweep.html
+++ b/WebRoot/mine-sweep.html
@@ -63,7 +63,7 @@
 	</g>
 	<g class="label">
 		<path d="M 120 370 l 7 -7 h35 l 7 7 v10 l -7 7 h-35 l -7 -7 z"></path>
-		<text id="time" x="145" y="382"></text>
+		<text id="time" x="145" y="382">0</text>
 	</g>
 	<g class="label">
 		<path d="M 430 370 l 7 -7 h35 l 7 7 v10 l -7 7 h-35 l -7 -7 z"></path>
