完成扫雷算法

--- a/WebRoot/mine-sweep.html
+++ b/WebRoot/mine-sweep.html
@@ -14,7 +14,8 @@
 <link href="css/mine.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<svg viewBox="0 0 600 400" preserveaspectratio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+<svg viewBox="0 0 600 400" preserveaspectratio="xMidYMid meet" 
+	xmlns="http://www.w3.org/2000/svg">
 	<defs>
 		<polygon id="pattern2" points="0 0 1 1 2 2" ></polygon>
 		<text id="t1" fill="#80ffff">1</text>
