--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta charset="UTF-8">
 <title>Mine Sweep</title>
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
-<script src="js/mine-sweep.js"></script>
-<link href="css/mine.css" rel="stylesheet" type="text/css">
+<script src="javascript/mine-sweep.js"></script>
+<link href="stylesheets/mine.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <svg viewBox="0 0 600 400" preserveaspectratio="xMidYMid meet" 
