--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta charset="UTF-8">
 <title>Mine Sweep</title>
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
-<script src="javascript/mine-sweep.js"></script>
+<script src="javascripts/mine-sweep.js"></script>
 <link href="stylesheets/mine.css" rel="stylesheet" type="text/css">
 </head>
 <body>
